--- a/plugin.yml
+++ b/plugin.yml
@@ -2,19 +2,50 @@ name: KaratekCore
 author: Karatek_HD
 version: 0.2.2 RC 2
 main: com.karatek.core.main.Main
+description: Some essential stuff for your Server
+website: https://github.com/KaratekHD
+database: false
+softdepend: [PermissionsEx, Essentials]
 commands:
    test:
+      description: Prints "Hallo Welt!"
+      usage: /test
    chatclear:
-   cc:
+      description: Clears the Chat
+      usage: /chatclear
+      permission: karatek.chatclear
+      aliases: [cc]
    kopf:
-   broadcast:
+      description: Gives you a head
+      usage: /kopf
+      permission: karatek.head
    globalmute:
+      description: Diables/Enables the Chat
+      usage: /globalmute
+      permission: karatek.globalmute
    kvanish:
-   kv:
-   sync:
+      description: Vanishes you
+      usage: /kvanish
+      permission: karatek.dev
+      aliases: [kv]
    devinfo:
+      description: Just a help for the Developer
+      usage: /devinfo
+      permission: karatek.dev
    server:
+      description: Emulates the BungeeCord Command /server
+      usage: /server <Server>
+      permission: karatek.server
    rank:
+      description: Changes a Players rank
+      usage: /rank <Player> <Rank>
+      permission: karatek.rank
    crash:
+      description: Crashes the Minecraft Client of the Player
+      usage: /crash <Player>
+      permission: karatek.crash
+   kversion:
+      description: Displays the Plugin Version
+      usage: /kversion
 
 
